--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
 .square {
-    width: 50px;
-    height: 50px;
-    border-style: solid;
+    border-style: thin;
     margin: 1px;
+    background-color: white;
 }
 
 .row {
     display: flex;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: grey;
+}
+
+.container {
+    width: auto;
+    height: auto;
 }
